Checking in cleaned up files with good comments.  TODO: implement user session.id for viewing and adding health readings.  Dockerize.  Implement passport-google.  Probably a few other TODOs.

--- a/views/base.pug
+++ b/views/base.pug
@@ -16,7 +16,9 @@ body
         li(class="nav-item")
           a(class="nav-link text-light" href="/register") Register      
         li(class="nav-item")
-          a(class="nav-link text-light" href="/data") Enter Medical Data
+          a(class="nav-link text-light" href="/data") Enter Medical Data (Requires login)
         li(class="nav-item")
-          a(class="nav-link text-light" href="/logout") Logout            
+          a(class="nav-link text-light" href="/logout") Logout (Should be hidden when logged in)        
+        li(class="nav-item")
+          a(class="nav-link text-light" href="#")  Display User First Name and Last Name here   
     block content
